<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_lib</name>
  <version>0.0.0</version>
  <description>Paquete para procesamiento de nubes de puntos de multibeam.</description>
  <maintainer email="uib@uib.com">uib</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>ros_numpy</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

</package>